Prevent form elements from spilling out of their parent

--- a/src/style/Textpattern/sass/modules/_forms.scss
+++ b/src/style/Textpattern/sass/modules/_forms.scss
@@ -35,6 +35,7 @@ a.button,
     @include adjust-font-size-to(13px, 0.8);
 
     margin: 0; // address margins set differently in Firefox4+, Safari5+ and Chrome
+    max-width: 100%; // prevent elements from spilling out of their parent
     font-family: $font-sans-serif;
     vertical-align: baseline;
 }
